Changes name of SASS function contrast() to prevent issues with filter: contrast CSS prop

--- a/assets/scss/jellyfish/01-tools/_functions.scss
+++ b/assets/scss/jellyfish/01-tools/_functions.scss
@@ -7,13 +7,13 @@
 // $map - name of map
 // $keys - name of keys to retrieve. This can work with an infinitely nested map
 @function map-deep-get($map, $keys...) {
-@each $key in $keys {
-  $map: map-get($map, $key);
-  @if not $map {
-    //@warn "`#{$key}` does not exist in the queried key."; // Redacted as this is not super useful, because we only have one key value and not the parent key
+  @each $key in $keys {
+    $map: map-get($map, $key);
+    @if not $map {
+      //@warn "`#{$key}` does not exist in the queried key."; // Redacted as this is not super useful, because we only have one key value and not the parent key
+    }
   }
-}
-@return $map;
+  @return $map;
 }
 
 // Test if map has all `$keys` nested with each others
@@ -36,8 +36,7 @@
   @if map-has-nested-keys($colors, $base, $shade) {
     $color: map-get(map-get($colors, $base), $shade);
     @return $color;
-  }
-  @else {
+  } @else {
     @error "Key: '#{$base}', Value: '#{$shade}' not found in $colors map. Cancelling compile.";
   }
 }
@@ -46,8 +45,7 @@
   @if map-has-key($type-scale, $size) {
     $font-size: map-get($type-scale, $size);
     @return $font-size;
-  }
-  @else {
+  } @else {
     @error "Key: '#{$size}' not found in $type-scale map. Cancelling compile.";
   }
 }
@@ -56,46 +54,45 @@
   @if map-has-key($sizing-system, $size) {
     $return-size: map-get($sizing-system, $size);
     @return $return-size;
-  }
-  @else {
+  } @else {
     @error "Key: '#{$size}' not found in $sizing-system map. Cancelling compile.";
   }
 }
 
 // Returns a given number divided by 2
 @function h($num) {
-@return $num/2;
+  @return $num/2;
 }
 
 // Returns the negative value of a given number
 @function n($num) {
-@return -$num;
+  @return -$num;
 }
 
 // Returns the negative and halved value of a given number
 @function nh($num) {
-@return n(h($num));
+  @return n(h($num));
 }
 @function hn($num) {
-@return n(h($num));
+  @return n(h($num));
 }
 
 // Lighten a colour progressively, much better than lighten()
 @function tint($color, $percentage) {
-@return mix($color, white, $percentage);
+  @return mix($color, white, $percentage);
 }
 
 // Darken a colour progressively, much better than darken()
 @function shade($color, $percentage) {
-@return mix($color, black, $percentage);
+  @return mix($color, black, $percentage);
 }
 
 // Allows us to use #{headings(1,6)} to apply css to all headings
-@function headings($from:1, $to:6) {
+@function headings($from: 1, $to: 6) {
   @if $from == $to {
-      @return 'h#{$from}';
+    @return 'h#{$from}';
   } @else {
-      @return 'h#{$from},' + headings($from+1, $to);
+    @return 'h#{$from},' + headings($from + 1, $to);
   }
 }
 
@@ -104,12 +101,12 @@
  * See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
  * @link https://medium.com/dev-channel/using-sass-to-automatically-pick-text-colors-4ba7645d2796
  */
- @function luminance($color) {
+@function luminance($color) {
   $red: nth($linear-channel-values, red($color) + 1);
   $green: nth($linear-channel-values, green($color) + 1);
   $blue: nth($linear-channel-values, blue($color) + 1);
 
-  @return .2126 * $red + .7152 * $green + .0722 * $blue;
+  @return 0.2126 * $red + 0.7152 * $green + 0.0722 * $blue;
 }
 
 /**
@@ -117,9 +114,9 @@
  * See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
  * @link https://medium.com/dev-channel/using-sass-to-automatically-pick-text-colors-4ba7645d2796
  */
-@function contrast($back, $front) {
-  $backLum: luminance($back) + .05;
-  $foreLum: luminance($front) + .05;
+@function calculate-contrast($back, $front) {
+  $backLum: luminance($back) + 0.05;
+  $foreLum: luminance($front) + 0.05;
 
   @return max($backLum, $foreLum) / min($backLum, $foreLum);
 }
@@ -127,14 +124,13 @@
 /**
  * Determine whether to use dark or light text on top of given color.
  */
-@function choose-contrast-color($color, $light-color: get-color(neutral,000), $dark-color: $color-text) {
-  $lightContrast: contrast($color, $light-color);
-  $darkContrast: contrast($color, $dark-color);
+@function choose-contrast-color($color, $light-color: get-color(neutral, 000), $dark-color: $color-text) {
+  $lightContrast: calculate-contrast($color, $light-color);
+  $darkContrast: calculate-contrast($color, $dark-color);
 
   @if ($lightContrast > $darkContrast) {
     @return $light-color;
-  }
-  @else {
+  } @else {
     @return $dark-color;
   }
 }
